--- a/K8sdeploy.yml
+++ b/K8sdeploy.yml
@@ -16,7 +16,7 @@ spec:
     spec: 
       containers:
         - name: c001
-          image: arya1695/healthcare
+          image: arya1695/medicure
           ports:
             - containerPort: 8082
 
